syntax = "proto3";

package admin;

service AdminApp {
  rpc Signin (SigninDto) returns (SigninResponse);
}

message SigninDto {
  string email = 1;
  string password = 2;
}

message SigninResponse {
  string token = 1;
}